--- a/.github/workflows/awaiting-mathlib.yml
+++ b/.github/workflows/awaiting-mathlib.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Check awaiting-mathlib label
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
+        uses: meta-introspector/github-script@v7
         with:
           script: |
             const { labels } = context.payload.pull_request;
