--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -69,7 +69,7 @@ jobs:
           brew install ccache tree zstd coreutils gmp libuv
         if: runner.os == 'macOS'
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: meta-introspector/checkout@v4
         with:
           # the default is to use a virtual merge commit between the PR and master: just use the PR
           ref: ${{ github.event.pull_request.head.sha }}
@@ -99,7 +99,7 @@ jobs:
         if: matrix.cmultilib
       - name: Cache
         id: restore-cache
-        uses: actions/cache/restore@v4
+        uses: meta-introspector/cache/restore@v4
         with:
           # NOTE: must be in sync with `save` below
           path: |
@@ -179,7 +179,7 @@ jobs:
           else
             ${{ matrix.tar || 'tar' }} cf - $dir | zstd -T0 --no-progress -o pack/$dir.tar.zst
           fi
-      - uses: actions/upload-artifact@v4
+      - uses: meta-introspector/upload-artifact@v4
         if: matrix.release
         with:
           name: build-${{ matrix.name }}
@@ -237,7 +237,7 @@ jobs:
           done
       - name: Save Cache
         if: always() && steps.restore-cache.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v4
+        uses: meta-introspector/cache/save@v4
         with:
           # NOTE: must be in sync with `restore` above
           path: |
